--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://containers-us-west-193.railway.app:6074/railw
 spring.datasource.username=root
 spring.datasource.password=aTZAMujSNp5m5N4wcXMn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+springdoc.swagger-ui.path=/index.html
